@@ -215,9 +215,9 @@
 
 <addon
   id="plugin.video.videodevil"
-  version="1.7.65"
+  version="1.7.66"
   name="VideoDevil"
-  provider-name="sfaxman / bootsy">
+  provider-name="xbmc-adult">
   <requires>
    <import addon="xbmc.python" version="1.0"/>
   </requires>
